<resources>
    <string name="app_name">GoogleRailTel</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>S
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign In</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_enter_username">Please enter username</string>
    <string name="error_enter_password">Please enter password</string>
    <string name="submit">Submit</string>
    <string name="Uploaded">Uploaded :</string>
    <string name="remark">Remark </string>
    <string name="username">UserName</string>
    <string name="Capture">Capture :</string>
</resources>
