<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_5dp"
    android:weightSum="10"
    android:fitsSystemWindows="true"
    tools:context=".activity.CaptureImageActivity"
    tools:showIn="@layout/activity_capture_image">

    <android.support.design.widget.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4"
        android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Capture"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/store_entry_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_taken_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/store_entry_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Uploaded"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/store_entry_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/store_entry_text_size"
                android:textStyle="bold" />

    </LinearLayout>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_5dp"
        android:layout_weight="3"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/rel_selfie"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_selfie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/img_cam_selfie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/camera" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_5dp"
        android:layout_weight="3"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/rel_selfie2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_selfie2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/img_cam_selfie2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/camera" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="2">

        <EditText
            android:id="@+id/txt_remark"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/remark"/>

        <Button
            android:id="@+id/btn_save_selfie"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/submit"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/store_entry_text_size"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
